--- a/example/sample.css
+++ b/example/sample.css
@@ -1,12 +1,14 @@
 /* Page styles */
 body {
-	background: #fff;
-	color: #000;
+	background: #f5e9d2;
+	color: #444;
+	color: hsla(0,0%,0%,.75);
 	font-size: 100%;
 	padding: 1em;
 	margin: 0 auto;
 	max-width: 30em;
 	font-family: 'Bookman Old Style', Georgia, serif;
+	text-shadow: 0 1px 0 hsla(0,0%,100%,.3);
 	}
 
 h1 {
@@ -16,6 +18,7 @@ h1 {
 	font-size: 2.4em;
 	font-weight: normal;
 	font-family: 'Palatino Linotype', Georgia, serif;
+	text-shadow: 0 1px 0 hsla(0,0%,100%,.5);
 	}
 
 p {
@@ -37,14 +40,14 @@ abbr {
 	}
 
 .sbrace {
-	margin-right: 0.5em;
+	margin-right: 0.3em;
 	}
 .hbrace {
-	margin-left: -0.5em;
+	margin-left: -0.3em;
 	}
 .slaquo {
-	margin-right: 0.44em;
+	margin-right: 0.42em;
 	}
 .hlaquo {
-	margin-left: -0.44em;
+	margin-left: -0.42em;
 	}
