Add a link to the repo to the example’s footer.

--- a/example/example.css
+++ b/example/example.css
@@ -33,6 +33,15 @@ p {
 	font-size: 1.15em;
 	}
 
+a,
+a:link,
+a:visited,
+a:hover,
+a:active,
+a:focus {
+	color: inherit;
+	}
+
 /* Typography */
 abbr {
 	font-size: 0.875em;
